[package]
name = "image-wasm"
version = "0.1.0"
authors = ["Jacob Clark <jacob.jh.clark@googlemail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"

[dependencies]
image = "0.23.11"
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]